Add my_each_with_index method and test case

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -49,3 +49,5 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+  
+  # rubocop:disable Style/CaseEquality
